
5.2b1 -> 5.3a1
    - jbj: js: stub in sufficient AutoFu to build --with-gpsee=internal.
    - jbj: js: prepare to use GPSEE as embedded JS interpreter.
    - jbj: js: switch print method to use JS_FN (Fast Native) w/o a stack frame.
    - jbj: js: allow --with-js=/usr/lib:/usr/include/js w external TraceMonkey.
    - jbj: rpmdb: sync DB_CONFIG.in with what "make check" is using.
    - jbj: js: guesstimate a set of modules that might be portable/functional.
    - jbj: fts: fully initialize FTSENT (for JS use).
    - jbj: js: don't bother doing rpmts check/order/run if no elements.
    - jbj: rpmdb: fix: ensure that rpmdb pool allocations are set to zero.
    - jbj: tests: add a check-sign target w DSA/RSA coverage.
    - jbj: sign: fix: add a killref to plug a header memory leak.
    - jbj: tests: add a check-ACID target w db_tool coverage tests.
    - jbj: rpmdb: fix: reduce the scope of db->db_h caching optimization
	(multiple headerLoad's are avoided) so that non-existent secondary
	indices can be lazily rebuilt as needed.
    - afb: JS: use libjs 1.7.0 on FreeBSD.
    - jbj: tests: configure an rpmdb using DB_CONFIG with reasonable tuning.
    - jbj: add --with-db-sql.
    - jbj: permit building with db-4.7.25.
    - jbj: rpmfi: add a getter for _fnbf;
    - jbj: xar: rescuscitate --with-xar=external (using xar-1.5.2).
    - jbj: bash: rescuscitate --with-bash=internal.
    - jbj: tests: add genpgp.sh/tpgp test(s) for DSA/RSA clearsigned plaintext.
    - jbj: lua: install executables and library.
    - jbj: perl: change --macros to point to ../macros/macros now.
    - jbj: verify: fix: no parent txn running %verifyscript/%sanitycheck.
    - jbj: rpmfi: fix: memory leak running %pretrans.
    - jbj: rpmdb: fix: add proper rc for RPMTAG_FILEPATHS w no files.
    - jbj: augtool: add error checking.
    - jbj: augeas: fix: aug_match no longer returns matches with argv sentinel.
    - jbj: js: fix: sort out module <-> library targets.