@@ -106,8 +106,8 @@
         --with-ficl=none \
         --with-bash=internal \
         --with-rc=internal \
-        --with-js=/usr/lib:/usr/include/js \
-        --with-gpsee=internal \
+        --with-js=/usr/local/gpsee/jsapi \
+        --with-gpsee=/usr/local/gpsee \
         --with-python \
         --with-pythonembed=/usr/lib:/usr/include/python2.6 \
         --with-perl \
