@@ -34,6 +34,7 @@ librpmmisc_la_LDFLAGS += \
 	@WITH_DB_LDFLAGS@ \
 	@WITH_FILE_LDFLAGS@ \
 	@WITH_FICL_LDFLAGS@ \
+	@WITH_GPSEE_LDFLAGS@ \
 	@WITH_JS_LDFLAGS@ \
 	@WITH_LUA_LDFLAGS@ \
 	@WITH_PCRE_LDFLAGS@ \
@@ -47,6 +48,7 @@ librpmmisc_la_LIBADD = \
 	@WITH_DB_LIBS@ \
 	@WITH_FICL_LIBS@ \
 	@WITH_FILE_LIBS@ \
+	@WITH_GPSEE_LIBS@ \
 	@WITH_JS_LIBS@ \
 	@WITH_LUA_LIBS@ \
 	@WITH_PCRE_LIBS@ \
