@@ -19,7 +19,7 @@
 
 #if defined(WITH_GPSEE)
 #define	MAKEDEPEND	/* XXX hack-o-round JS_THREADSAFE check */
-#include <gpsee/gpsee.h>
+#include <gpsee.h>
 typedef	gpsee_interpreter_t * JSI_t;
 #else
 typedef struct JSI_s {
